# dnsr

./: Cargo.toml  Dockerfile  LICENSE  README.md  config.yml  domains.yml  key
.github/: dependabot.yml
src/: config.rs  dns.rs  error.rs  fs.rs  key.rs  logger.rs  main.rs  metric.rs  tsig.rs  watcher.rs  zone.rs
src/dns/: mod.rs  service.rs
src/service/: handler.rs  mod.rs  watcher.rs
src/service/middleware/: metric.rs  mod.rs  rfc2136.rs  tsig.rs
