[package]
name = "dnsr"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
bytes = "1.6.1"
convert_case = "0.6.0"
domain = { features = [
    "zonefile",
    "net",
    "unstable-server-transport",
    "unstable-zonetree",
    "tsig",
], git = "https://github.com/thibault-cne/domain", branch = "main" }
futures = "0.3.30"
log = { version = "0.4.22", features = ["std"] }
notify = { version = "6.1.1" }
ring = { version = "0.17.8", features = ["std"] }
serde = { version = "1.0.204", features = ["derive"], default-features = false }
serde_yaml = { version = "0.9.34", default-features = false }
tokio = { version = "1.39", features = ["net"], default-features = false }
